@@ -273,10 +273,9 @@ CONTAINS
     call print_clock ('greenf')
     call print_clock ('cgsolve')
     call print_clock ('ch_psi')
-    call print_clock ('h_psiq')
+    call print_clock ('h_psi')
     WRITE( stdout, * )
     call print_clock ('u_kq')
-    call print_clock ('h_psi')
     WRITE( stdout, * )
     call print_clock ('apply_p')
     call print_clock ('apply_vel')
